--- a/index.html
+++ b/index.html
@@ -9,57 +9,111 @@
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feynman Lego Diagrams</title>
+    <title>Particle Phyics via Lego</title>
 
     <link type="text/css" rel="stylesheet" href="css/index.css" />
 
 </head>
 
 <body>
-    <div id">
-        <h2 class="center-align">Feynman Diagrams as Lego-animations</h2>
-        <h5 class="center-align">This website was made during a course in the <a
-                href="https://juniorakademienrw.de/">German Junior Akademie</a></p>
 
-    </div>
-    <br>
     <div class="container">
-        <!-- Page Content goes here -->
-        <div class="row center-align">
-            <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image">
-                        <img class="thumbnail responsive-img" src="preview/electron_electron.svg" width="150" height="150"
-                            viewBox="0 0 40 40" />
+        <main>
+
+            <h2 class="center-align">Particle Physics via Lego-animations</h2>
+            <h5 class="center-align">This website was made during a course in the <a
+                    href="https://juniorakademienrw.de/">German
+                    Junior Akademie</a></p>
+
+                <div class="row center-align">
+                    <h3 class="center-align">The Basics</h3>
+                    <div class="col s12 m4 l4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="thumbnail responsive-img" src="preview/feynman.jpg" width="150" height="150"
+                                    viewBox="0 0 40 40" />
+                            </div>
+                            <div class="card-content">
+                                <h5>Feynman Diagrams</h5>
+                            </div>
+                            <div class="card-action">
+                                <a class="green-text text-accent-4" href="explanations/feynman_diagrams.html">View</a>
+                            </div>
+                        </div>
+
+
                     </div>
-                    <div class="card-content">
-                        <h5>Electron-Electron Interaction</h5>
+
+
+                    <div class="col s12 m4 l4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="thumbnail responsive-img" src="preview/standard_model.svg" width="150"
+                                    height="150" viewBox="0 0 40 40" />
+                            </div>
+                            <div class="card-content">
+                                <h5>The Standard Model</h5>
+                            </div>
+                            <div class="card-action">
+                                <a class="green-text text-accent-4" href="explanations/standard_model.html">View</a>
+                            </div>
+                        </div>
+
+
                     </div>
-                    <div class="card-action">
-                        <a class="green-text text-accent-4" href="animations/electron_electron.html">View</a>
+                    <div class="col s12 m4 l4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="thumbnail responsive-img" src="assets/forces.jpg" width="150"
+                                    height="150" viewBox="0 0 40 40" />
+                            </div>
+                            <div class="card-content">
+                                <h5>Forces in Particle Phyics</h5>
+                            </div>
+                            <div class="card-action">
+                                <a class="green-text text-accent-4" href="explanations/forces.html">View</a>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <h3 class="center-align">Animations</h3>
+
+
+                <div class="row center-align">
+                    <div class="col s12 m4 l4">
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="thumbnail responsive-img" src="preview/electron_electron.svg" width="150"
+                                    height="150" viewBox="0 0 40 40" />
+                            </div>
+                            <div class="card-content">
+                                <h5>Electron-Electron Interaction</h5>
+                            </div>
+                            <div class="card-action">
+                                <a class="green-text text-accent-4"
+                                    href="animations/electron_electron/electron_electron_1.html">View</a>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
 
 
-            </div>
-<!--             <div class="col s5 m5">
-                <div class="card">
-                    <div class="card-image">
-                        <img class="thumbnail responsive-img" src="preview/electron_electron.svg" width="150" height="150"
-                            viewBox="0 0 40 40" />
-                        <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                        <p>Electron-Electron Interaction</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">This is a link</a>
-                    </div>
-                </div>
 
-
-            </div> -->
-        </div>
+        </main>
+        <h5><a href="assets/legende.jpg">Lego-legend</a></h5>
+        <h5>Images</h5>
+        <ul>
+            <li>Electron-Electron Interaction: JabberWok at the English-language Wikipedia, CC BY-SA 3.0
+                &lthttp://creativecommons.org/licenses/by-sa/3.0/&gt, via Wikimedia Commons </li>
+            <li>Feynman Diagram Explanation: NIchiless Dey, the best course leader, original by Richard Feynman, one of
+                the gretest physicists of the 20th century</li>
+            <li>The Standard Model: Cush, Public domain, via Wikimedia Commons</li>
+        </ul>
     </div>
 
 
